stop font jumping

--- a/themes/cactus/assets/scss/common-style.scss
+++ b/themes/cactus/assets/scss/common-style.scss
@@ -17,7 +17,7 @@ body {
   height: 100%;
   background-color: $color-background;
   color: $color-text;
-  font-display: swap;
+  font-display: fallback;
   font-weight: 400;
   font-size: $font-size;
   font-family: $font-family-body;
